--- a/app/src/main/res/layout/activity_msg.xml
+++ b/app/src/main/res/layout/activity_msg.xml
@@ -1,92 +1,69 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="NewApi">
+
     <data>
+
         <variable
             name="test"
             type="String" />
     </data>
-    <RelativeLayout
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <RelativeLayout
-            android:id="@+id/rl_header"
-            android:layout_width="fill_parent"
-            android:layout_height="50dip"
-            android:background="@color/sticker_blue"
-            android:gravity="center_vertical">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="@string/str_dongtai"
-                android:textColor="@color/potato_white"
-                android:textSize="@dimen/mshow_txt_max" />
+        </android.support.design.widget.AppBarLayout>
 
-            <ImageView
-                android:id="@+id/iv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:onClick="onClick"
-                android:padding="10dip"
-                android:src="@drawable/ic_add_white_24dp" />
-        </RelativeLayout>
-
-        <FrameLayout
-            android:id="@+id/container"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/rl_header">
+            android:orientation="vertical"
+            android:layout_marginTop="35dp">
 
-            <LinearLayout
+            <com.potato.library.view.NormalEmptyView
+                android:id="@+id/empty_view"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+            </com.potato.library.view.NormalEmptyView>
+
+            <com.potato.library.view.refresh.HFRecyclerSwipeLayout
+                android:id="@+id/swipe_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-                <com.potato.library.view.NormalEmptyView
-                    android:id="@+id/empty_view"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-
-                </com.potato.library.view.NormalEmptyView>
-
-                <com.potato.library.view.refresh.ListSwipeLayout
-                    android:id="@+id/swipe_container"
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:cacheColorHint="@android:color/transparent"
+                    android:divider="@android:color/transparent"
+                    android:dividerHeight="0px"
+                    android:listSelector="@android:color/transparent"
+                    android:scrollbars="none" />
 
-                    <ListView
-                        android:id="@+id/list"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@android:color/white"
-                        android:cacheColorHint="@android:color/transparent"
-                        android:divider="@color/divider"
-                        android:dividerHeight="1px"
-                        android:listSelector="@android:color/transparent"
-                        android:scrollbars="none" />
-
-                </com.potato.library.view.refresh.ListSwipeLayout>
+            </com.potato.library.view.refresh.HFRecyclerSwipeLayout>
 
 
-            </LinearLayout>
-        </FrameLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_below="@id/rl_header"
-            android:background="@drawable/bottom_shadow_bg" />
+        </LinearLayout>
 
 
-    </RelativeLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
