--- a/app/src/main/res/layout/activity_topic_detail.xml
+++ b/app/src/main/res/layout/activity_topic_detail.xml
@@ -1,5 +1,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="NewApi">
 
     <data>
 
@@ -8,39 +10,31 @@
             type="String" />
     </data>
 
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <RelativeLayout
-            android:id="@+id/rl_header"
-            android:layout_width="fill_parent"
-            android:layout_height="50dip"
-            android:background="@color/sticker_blue"
-            android:gravity="center_vertical">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="FitTime"
-                android:textColor="@color/potato_white"
-                android:textSize="@dimen/txt_max" />
-
-        </RelativeLayout>
-
+        </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/rl_header"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="35dp">
 
             <com.potato.library.view.NormalEmptyView
                 android:id="@+id/empty_view"
@@ -50,24 +44,24 @@
 
             </com.potato.library.view.NormalEmptyView>
 
-            <com.potato.library.view.refresh.ListSwipeLayout
+            <com.potato.library.view.refresh.HFRecyclerSwipeLayout
                 android:id="@+id/swipe_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2">
 
-                <ListView
+                <android.support.v7.widget.RecyclerView
                     android:id="@+id/list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
                     android:cacheColorHint="@android:color/transparent"
-                    android:divider="@color/divider"
-                    android:dividerHeight="1px"
+                    android:divider="@android:color/transparent"
+                    android:dividerHeight="0px"
                     android:listSelector="@android:color/transparent"
                     android:scrollbars="none" />
 
-            </com.potato.library.view.refresh.ListSwipeLayout>
+            </com.potato.library.view.refresh.HFRecyclerSwipeLayout>
 
             <View
                 android:layout_width="fill_parent"
@@ -77,10 +71,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/potato_white"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="5dp"
-                android:background="@color/potato_white">
+                android:padding="5dp">
 
                 <EditText
                     android:id="@+id/et_send_coment"
@@ -100,13 +94,8 @@
                     android:src="@drawable/ic_comment" />
 
             </LinearLayout>
+
         </LinearLayout>
 
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_below="@id/rl_header"
-            android:background="@drawable/bottom_shadow_bg" />
-    </RelativeLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
