--- a/app/src/main/res/layout/item_msg.xml
+++ b/app/src/main/res/layout/item_msg.xml
@@ -16,18 +16,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:background="@color/potato_white"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="?android:selectableItemBackground"
+            android:clickable="true"
+            >
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="2dp">
+                android:padding="5dp">
 
                 <TextView
                     android:id="@+id/tv_name"
